# libpqr

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py
data/: README.md  complexes_codes_testset.json  complexes_sample.json  complexes_sar_examples.json
libpqr/: __init__.py  aux.py  common.py  data.py
libpqr/cxx/: bindings.cpp  edgesearch.cpp  edgesearch.hpp  gridsearch.cpp  gridsearch.hpp
libpqr/gen1d/: __init__.py  aux.py  fragment.py  model.py  rebuild.py
libpqr/gen2d/: __init__.py  arch.py  aux.py  baseline.py  build.py  model.py  settings.py
libpqr/gen3d/: __init__.py  arch.py  aux.py  baseline.py  build.py  model.py  settings.py
models/: import.py
scripts/: build_gen1d.py  build_gen2d.py  build_gen3d.py  sample_spt.py
workflow/: README.md  run.sh
