[metadata]
name = LibPQR
version = attr: libpqr.__version__
url = https://github.com/capoe/libpqr
author = Carl Poelking
author_email = carl.poelking@astx.com
maintainer = Carl Poelking
maintainer_email = carl.poelking@astx.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    chemical
    physicochemical
    machine learning
    generative models
    ligand elaboration
description = Bias-controlled multi-level generative framework for ligand elaboration
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_file = LICENSE.txt

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
scripts =
setup_requires =
install_requires = 

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support. Removing this line (or setting universal to 0) will prevent
# bdist_wheel from trying to make a universal wheel. For more see:
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal=1

[flake8]
ignore =
    # Line too long
    # E501
    # Continuation line under-indented for visual indent
    # E128
    # Module level import not at top of file
    # E402
    # Whitespace before ':'
    E203
    # Line break occurred before a binary operator (PEP8 changed in 2016)
    W503
exclude =
    .git
    __pycache__
    old
    build
    dist
    .cache
    venv*/
max-line-length = 100

[isort]
combine_as_imports = true
line_length = 100
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true
